--- a/styles.css
+++ b/styles.css
@@ -210,3 +210,27 @@ button {
   background: none;
   color: white;
 }
+
+@media only screen and (max-width: 768px) {
+  .banner .Click {
+    font-size: 1em;
+  }
+
+  .gallery {
+    padding: 10px;
+  }
+
+  .image {
+    width: calc(50% - 20px);
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .banner .Click {
+    font-size: 0.8em;
+  }
+
+  .image {
+    width: calc(100% - 20px);
+  }
+}
