--- a/styles.css
+++ b/styles.css
@@ -204,11 +204,16 @@ header.sticky ul li a {
   color: white;
 }
 button {
-  display: block;
-  margin: 20px auto;
   border: none;
   background: none;
   color: white;
+  font-size: 1em;
+  cursor: pointer;
+  margin-top: 20px;
+  transition: background-color 0.3s;
+}
+button :hover {
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 @media only screen and (max-width: 768px) {
